[gd_scene load_steps=27 format=3 uid="uid://bnj2bial2j2ly"]

[ext_resource type="Script" path="res://tortoise.gd" id="1_brqg7"]
[ext_resource type="Texture2D" uid="uid://58582ids0p76" path="res://Tortoise.png" id="2_shdmo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0j6x7"]
atlas = ExtResource("2_shdmo")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8llqb"]
atlas = ExtResource("2_shdmo")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lagxl"]
atlas = ExtResource("2_shdmo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8u6yt"]
atlas = ExtResource("2_shdmo")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wv3q"]
atlas = ExtResource("2_shdmo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnb4q"]
atlas = ExtResource("2_shdmo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsalj"]
atlas = ExtResource("2_shdmo")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nmpc"]
atlas = ExtResource("2_shdmo")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_anx5w"]
atlas = ExtResource("2_shdmo")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gaoq"]
atlas = ExtResource("2_shdmo")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbcsu"]
atlas = ExtResource("2_shdmo")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma2dn"]
atlas = ExtResource("2_shdmo")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_socdh"]
atlas = ExtResource("2_shdmo")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_td07y"]
atlas = ExtResource("2_shdmo")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8rm0"]
atlas = ExtResource("2_shdmo")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx883"]
atlas = ExtResource("2_shdmo")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5depg"]
atlas = ExtResource("2_shdmo")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb0u8"]
atlas = ExtResource("2_shdmo")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqv3g"]
atlas = ExtResource("2_shdmo")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4b6h"]
atlas = ExtResource("2_shdmo")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv7jx"]
atlas = ExtResource("2_shdmo")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxqfe"]
atlas = ExtResource("2_shdmo")
region = Rect2(32, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_l7ccc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j6x7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8llqb")
}],
"loop": true,
"name": &"Idle_D",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lagxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8u6yt")
}],
"loop": true,
"name": &"Idle_L",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wv3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnb4q")
}],
"loop": true,
"name": &"Idle_R",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsalj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nmpc")
}],
"loop": true,
"name": &"Idle_U",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_anx5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j6x7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gaoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j6x7")
}],
"loop": true,
"name": &"Move_D",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbcsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma2dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbcsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_socdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td07y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8rm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td07y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_socdh")
}],
"loop": true,
"name": &"Move_L",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx883")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5depg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx883")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb0u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqv3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4b6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqv3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb0u8")
}],
"loop": true,
"name": &"Move_R",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv7jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsalj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxqfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsalj")
}],
"loop": true,
"name": &"Move_U",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gdy6"]
size = Vector2(32, 32)

[node name="Tortoise" type="Node2D"]
position = Vector2(0, 80)
script = ExtResource("1_brqg7")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_l7ccc")
animation = &"Move_R"
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"should_round_fps": true,
"slice": "",
"source": "res://Art/Tortoise.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "3a0dd62770914be054bc3e1fd376149c"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_4gdy6")

[node name="RayCastRight1" type="RayCast2D" parent="."]
target_position = Vector2(16, -8)
collide_with_areas = true

[node name="RayCastRight2" type="RayCast2D" parent="."]
target_position = Vector2(16, 8)
collide_with_areas = true

[node name="RayCastLeft1" type="RayCast2D" parent="."]
target_position = Vector2(-16, -8)
collide_with_areas = true

[node name="RayCastLeft2" type="RayCast2D" parent="."]
target_position = Vector2(-16, 8)
collide_with_areas = true

[node name="RayCastUp1" type="RayCast2D" parent="."]
target_position = Vector2(-8, -16)
collide_with_areas = true

[node name="RayCastUp2" type="RayCast2D" parent="."]
target_position = Vector2(8, -16)
collide_with_areas = true

[node name="RayCastDown1" type="RayCast2D" parent="."]
target_position = Vector2(-8, 16)
collide_with_areas = true

[node name="RayCastDown2" type="RayCast2D" parent="."]
target_position = Vector2(8, 16)
collide_with_areas = true

[node name="RayCastRightPlayer" type="RayCast2D" parent="."]
target_position = Vector2(16, 0)
collision_mask = 2
collide_with_areas = true

[node name="RayCastLeftPlayer" type="RayCast2D" parent="."]
target_position = Vector2(-16, 0)
collision_mask = 2
collide_with_areas = true

[node name="RayCastUpPlayer" type="RayCast2D" parent="."]
target_position = Vector2(0, -16)
collision_mask = 2
collide_with_areas = true

[node name="RayCastDownPlayer" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)
collision_mask = 2
collide_with_areas = true
